sentry3/nginx/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sentry-nginx
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: sentry
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: sentry
