sentry3/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentry-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sentry.dev.compliantcloud.com
      secretName: sentry-nginx
  rules:
    - host: sentry.dev.compliantcloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sentry-nginx
                port:
                  number: 80
